fixed a layout bug

--- a/src/pages/ReviewOrder/ReviewOrder.css
+++ b/src/pages/ReviewOrder/ReviewOrder.css
@@ -37,12 +37,34 @@
 }
 .order_review_body{
     display: grid;
-    grid-template-columns: 1fr 6fr 1fr; 
+    grid-template-columns: 1fr 5fr 2fr; 
     position: relative;
 }
 .price_and_remove_button{
     display: grid;
     grid-template-columns: 1fr 1fr;
+    padding: 10px;
+}
+.price_and_remove_button p{
+    margin: 0px;
+    padding: 0px;
+    width: 100%;
+    
+}
+.price_and_remove_button div{
+    font-family: Arial, Helvetica, sans-serif;
+    display: flex;
+    align-items: end;
+    justify-content: center;
+    border: none;
+    padding: 0px;
+    margin: 0px;
+    width: 100%;
+} 
+.price_and_remove_button p{ 
+    margin: 0px;
+    padding: 0px;
+    color: blue;
 }
 .order_review_body p{
     display: inline;
@@ -54,6 +76,7 @@
 }
 .order_review_totals p,h3{
     margin: 10px;
+    font-family: Arial, Helvetica, sans-serif;
 }
 .revew_order_footer{
     position: fixed;
